--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,163 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form
+      action="http://localhost:0112/"
+      method="post"
+    >
+      <fieldset class="form">
+        <legend>Personal information</legend>
+        <div class="input">
+          <label>Surname:</label>
+          <input type="text" name="surname">
+        </div>
+
+        <div class="input">
+          <label>Name:</label>
+          <input
+            type="text"
+            name="name"
+            required
+          >
+        </div>
+
+        <div class="input">
+          <label>How old are You?</label>
+          <input
+            type="number"
+            name="age"
+            min="1"
+            max="100"
+            value="12"
+          >
+        </div>
+
+        <div class="input">
+          <label>Full date of birth:</label>
+          <input
+            type="date"
+            name="date"
+            min="11.07.1922"
+            max="11.07.2021"
+          >
+        </div>
+
+        <div class="input">
+          <label>I accept the tern of the agreement</label>
+          <input
+            type="checkbox"
+            name="accept"
+            required
+          >
+        </div>
+
+      </fieldset>
+
+      <fieldset class="form">
+        <legend>Registration</legend>
+
+        <div class="input">
+          <label>E-mail:</label>
+          <input
+            type="email"
+            name="email"
+            placeholder="email@example.com"
+            required
+          >
+        </div>
+
+        <div class="input">
+          <label>Password:</label>
+          <input
+            type="password"
+            name="password"
+            required
+            minlength="7"
+            maxlength="32"
+          >
+        </div>
+
+      </fieldset>
+
+      <fieldset class="form">
+        <legend>An interesting fact about you!</legend>
+
+        <div class="input">
+          Do you love cats?:
+
+          <label>
+            <input
+              type="radio"
+              name="loveCats"
+              value="Y"
+            >
+            Yes
+          </label>
+
+          <label>
+            <input
+            type="radio"
+            name="loveCats"
+            value="N"
+          >
+          No
+          </label>
+
+        </div>
+
+        <div class="input">
+          <label>What is your favorite color?</label>
+          <input type="color" name="favoriteColor">
+        </div>
+
+        <div class="input">
+          <label>What time do you go bed?</label>
+          <input type="time" name="timeToBed">
+        </div>
+
+        <div class="input">
+          <label>What are your favorite brand of cars?</label>
+          <select name="favoriteCar" multiple>
+            <option value="1">BMW</option>
+            <option value="2">Audi</option>
+            <option value="3">Lada</option>
+          </select>
+        </div>
+
+        <div class="input">
+          <label>How do you rate our work?</label>
+          <input
+            type="range"
+            name="rangeOurWork"
+            value="0"
+          >
+        </div>
+
+
+      </fieldset>
+
+      <fieldset class="form">
+        <legend>Additional info:</legend>
+
+        <div class="input">
+          <label> Comments:
+            <textarea name="comments">
+            </textarea>
+          </label>
+        </div>
+
+        <div class="input">
+          <label>Would you recommend us?</label>
+          <select name="recommendUs">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </div>
+      </fieldset>
+
+      <button type="submit">Submit</button>
+
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
