action link was changed 2

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <fieldset class="form">
         <legend>Personal information</legend>
         <div class="input">
-          <label>Surname:</label>
+          <label>Surname:</label>а
           <input type="text" name="surname">
         </div>
 
