--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
             type="text"
             name="name"
             required
+            autocomplete="off"
           >
         </div>
 
