autocomplete was added in whole input wuth type = text

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,12 @@
       <fieldset class="form">
         <legend>Personal information</legend>
         <div class="input">
-          <label>Surname:</label>а
-          <input type="text" name="surname">
+          <label>Surname:</label>
+          <input
+            type="text"
+            name="surname"
+            autocomplete="off"
+          >
         </div>
 
         <div class="input">
